--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/app": "^15.3.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
@@ -16,14 +17,14 @@
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "firebase": "8.2.3",
+    "nanoid": "^4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-auto-size-text": "^1.1.1",
-    "react-native-autogrow-textinput": "^5.4.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4"
   },
